--- a/web/template-editor.html
+++ b/web/template-editor.html
@@ -148,6 +148,9 @@
         <div class="excel-paste-modal__hint">
           1) Copy a formatted cell range in Excel (Ctrl+C). 2) Click the box below and paste (Ctrl+V). This will import
           table + styles into the Template JSON.
+          <br />
+          Note: Please enable <b>Wrap Text</b> in Excel before copying (Home → Wrap Text). If not enabled, long text can
+          create hidden/overflow cells and some formatting may be lost on import.
         </div>
         <div id="excelPasteTarget" class="excel-paste-modal__target" contenteditable="true" spellcheck="false" tabindex="0"></div>
         <div class="excel-paste-modal__actions">
