--- a/web/template-editor.inline.html
+++ b/web/template-editor.inline.html
@@ -1926,6 +1926,9 @@
         <div class="excel-paste-modal__hint">
           1) Copy a formatted cell range in Excel (Ctrl+C). 2) Click the box below and paste (Ctrl+V). This will import
           table + styles into the Template JSON.
+          <br />
+          Note: Please enable <b>Wrap Text</b> in Excel before copying (Home → Wrap Text). If not enabled, long text can
+          create hidden/overflow cells and some formatting may be lost on import.
         </div>
         <div id="excelPasteTarget" class="excel-paste-modal__target" contenteditable="true" spellcheck="false" tabindex="0"></div>
         <div class="excel-paste-modal__actions">
@@ -3918,6 +3921,28 @@
         return out;
       }
 
+      function hasVisibleCellText(cellCfg) {
+        const t = cellCfg && typeof cellCfg === "object" ? String(cellCfg.text ?? "") : "";
+        return Boolean(t.trim());
+      }
+
+      function hasCellBlockingContent(cellCfg) {
+        if (!cellCfg || typeof cellCfg !== "object") return false;
+        const t = String(cellCfg.text ?? "").trim();
+        if (t) return true;
+        const bind = String(cellCfg.bind ?? "").trim();
+        return Boolean(bind);
+      }
+
+      function nextBlockingCol(blockColsSorted, col) {
+        if (!Array.isArray(blockColsSorted) || !blockColsSorted.length) return 0;
+        for (let i = 0; i < blockColsSorted.length; i++) {
+          const c = Number(blockColsSorted[i]);
+          if (Number.isFinite(c) && c > col) return c;
+        }
+        return 0;
+      }
+
       function buildColumnWidths(config, cols) {
         const explicit = new Map();
         const colWidths = config?.grid?.colWidths && typeof config.grid.colWidths === "object" ? config.grid.colWidths : {};
@@ -4022,6 +4047,7 @@
 
         const rows = Math.max(1, Math.floor(Number(config?.grid?.rows || 1)));
         const cols = Math.max(1, Math.floor(Number(config?.grid?.cols || 1)));
+        const excelOverflow = Boolean(config?.grid?.excelOverflow);
 
         const table = document.createElement("table");
         table.className = "excel-like-table";
@@ -4030,10 +4056,35 @@
 
         const cellMap = new Map();
         const cells = Array.isArray(config.cells) ? config.cells : [];
+        const rowBlocking = new Map();
         for (const c of cells) {
           const addr = normalizeAddress(c?.addr);
           if (!addr) continue;
           cellMap.set(addr, c);
+
+          if (excelOverflow) {
+            const parsed = parseAddress(addr);
+            if (!parsed) continue;
+            if (!hasCellBlockingContent(c)) continue;
+            if (!rowBlocking.has(parsed.row)) rowBlocking.set(parsed.row, []);
+            rowBlocking.get(parsed.row).push(parsed.col);
+          }
+        }
+        if (excelOverflow) {
+          for (const [r, list] of rowBlocking.entries()) {
+            const sorted = list
+              .map((x) => Number(x))
+              .filter((n) => Number.isFinite(n) && n > 0)
+              .sort((a, b) => a - b);
+            const uniq = [];
+            let last = 0;
+            for (const c of sorted) {
+              if (c === last) continue;
+              uniq.push(c);
+              last = c;
+            }
+            rowBlocking.set(r, uniq);
+          }
         }
 
         const colWidths = buildColumnWidths(config, cols);
@@ -4051,6 +4102,7 @@
 
         const colgroup = document.createElement("colgroup");
         let totalWidth = 0;
+        const colPrefix = [0];
         for (let c = 1; c <= cols; c++) {
           const w = Number(colWidths.get(c));
           const col = document.createElement("col");
@@ -4059,9 +4111,19 @@
             totalWidth += w;
           }
           colgroup.appendChild(col);
+          colPrefix[c] = totalWidth;
         }
         table.appendChild(colgroup);
         if (totalWidth > 0) table.style.width = `${totalWidth}px`;
+
+        function spanWidthPx(fromCol, toCol) {
+          const from = Math.max(1, Math.floor(Number(fromCol || 1)));
+          const to = Math.max(1, Math.floor(Number(toCol || 1)));
+          if (to < from) return 0;
+          const start = colPrefix[from - 1] || 0;
+          const end = colPrefix[to] || 0;
+          return Math.max(0, end - start);
+        }
 
         for (let r = 1; r <= rows; r++) {
           const tr = document.createElement("tr");
@@ -4077,7 +4139,6 @@
 
             const cellCfg = cellMap.get(addr);
             if (cellCfg) {
-              td.textContent = String(cellCfg.text ?? "");
               const bind = String(cellCfg.bind || "").trim();
               if (bind) {
                 td.dataset.bind = bind;
@@ -4108,6 +4169,38 @@
             } else if (cellCfg && typeof cellCfg === "object") {
               const cellStyle = String(cellCfg.style || "").trim();
               if (cellStyle) td.style.cssText = cellStyle.endsWith(";") ? cellStyle : `${cellStyle};`;
+            }
+
+            if (excelOverflow) {
+              td.style.position = "relative";
+              td.style.zIndex = String(Math.max(1, cols - c + 1));
+            }
+
+            if (cellCfg) {
+              const text = String(cellCfg.text ?? "");
+              const allowOverflow = excelOverflow && hasVisibleCellText(cellCfg);
+
+              if (allowOverflow) {
+                td.style.overflow = "visible";
+
+                const nextBlock = nextBlockingCol(rowBlocking.get(r), c);
+                const limitCol = nextBlock ? Math.max(c, nextBlock - 1) : cols;
+                const maxWidth = spanWidthPx(c, limitCol);
+
+                const content = document.createElement("div");
+                content.className = "cell-content";
+                content.textContent = text;
+                content.style.pointerEvents = "none";
+                content.style.position = "relative";
+                content.style.zIndex = "2";
+                content.style.display = "inline-block";
+                content.style.whiteSpace = "nowrap";
+                if (maxWidth) content.style.maxWidth = `${maxWidth}px`;
+                content.style.overflow = "hidden";
+                td.appendChild(content);
+              } else {
+                td.textContent = text;
+              }
             }
 
             const merge = startMap.get(addr);
@@ -5061,6 +5154,10 @@
     (function (ns) {
       "use strict";
 
+      // Fixed square cell size for the editor (px).
+      // Keep this small; users can edit text via double-click (textarea) even when clipped.
+      const DEFAULT_CELL_SIZE_PX = 20;
+
       function stripCssComments(cssText) {
         return String(cssText || "")
           .replace(/<!--|-->/g, "")
@@ -5109,24 +5206,6 @@
           .map(([k, v]) => `${k}:${v}`)
           .join(";")
           .concat(";");
-      }
-
-      function cssSizeToPx(value) {
-        const raw = String(value ?? "").trim().toLowerCase();
-        if (!raw) return 0;
-
-        const m = /^(-?\d+(?:\.\d+)?)(px|pt|in|cm|mm)?$/.exec(raw);
-        if (!m) return 0;
-
-        const n = Number(m[1]);
-        if (!Number.isFinite(n)) return 0;
-        const unit = String(m[2] || "px").toLowerCase();
-
-        const factors = { px: 1, pt: 96 / 72, in: 96, cm: 96 / 2.54, mm: 96 / 25.4 };
-        const f = factors[unit] || 1;
-        const px = n * f;
-        if (!Number.isFinite(px) || px <= 0) return 0;
-        return Math.max(1, Math.round(px));
       }
 
       function normalizeExcelCssValue(prop, valueRaw) {
@@ -5372,35 +5451,6 @@
         return lines.map((l) => String(l).split("\t"));
       }
 
-      function pickSquareCellSize(colWidths, rowHeights, fallbackPx) {
-        const fallback = Math.max(8, Math.floor(Number(fallbackPx || 32)));
-
-        const widths = [];
-        for (const v of Object.values(colWidths || {})) {
-          const n = Math.floor(Number(v));
-          if (Number.isFinite(n) && n > 0) widths.push(n);
-        }
-
-        const heights = [];
-        for (const v of Object.values(rowHeights || {})) {
-          const n = Math.floor(Number(v));
-          if (Number.isFinite(n) && n > 0) heights.push(n);
-        }
-
-        function median(list) {
-          const arr = list.slice().sort((a, b) => a - b);
-          if (!arr.length) return 0;
-          const mid = Math.floor(arr.length / 2);
-          if (arr.length % 2) return arr[mid];
-          return Math.round((arr[mid - 1] + arr[mid]) / 2);
-        }
-
-        const mw = median(widths);
-        const mh = median(heights);
-        const picked = mw && mh ? Math.round((mw + mh) / 2) : mw || mh || fallback;
-        return Math.max(8, Math.min(200, picked));
-      }
-
       function buildTemplateConfigFromPlainGrid(plainGrid) {
         const rows = Math.max(1, plainGrid?.length || 0);
         let cols = 1;
@@ -5420,8 +5470,8 @@
 
         return {
           type: "excel-like-table",
-          grid: { rows, cols, defaultColWidth: 32, defaultRowHeight: 32 },
-          css: { cell: "padding:2px 4px;vertical-align:middle;background:#fff;color:#111;white-space:pre-wrap;" },
+          grid: { rows, cols, defaultColWidth: DEFAULT_CELL_SIZE_PX, defaultRowHeight: DEFAULT_CELL_SIZE_PX, excelOverflow: true },
+          css: { cell: "padding:2px 4px;vertical-align:middle;background:#fff;color:#111;white-space:nowrap;" },
           defaultCellClass: ["cell"],
           merges: [],
           cells,
@@ -5442,131 +5492,56 @@
         if (!table) return { ok: false, error: "No <table> found in clipboard HTML. (Copy from Excel cells, not plain text.)" };
 
         const cssMeta = parseExcelCss(doc);
-        const colWidths = {};
-        const rowHeights = {};
-
-        const colEls = Array.from(table.querySelectorAll("col"));
-        for (let i = 0; i < colEls.length; i++) {
-          const el = colEls[i];
-          const w = cssSizeToPx(el?.style?.width) || cssSizeToPx(el?.getAttribute?.("width"));
-          if (!w) continue;
-          colWidths[indexToCol(i + 1)] = w;
-        }
 
         const rows = Array.from(table.querySelectorAll("tr"));
-        const occupied = [];
         let maxCol = 0;
-        let maxRow = 0;
 
         const cells = [];
 
         for (let r = 0; r < rows.length; r++) {
           const tr = rows[r];
           const rowNum = r + 1;
-          maxRow = Math.max(maxRow, rowNum);
-
-          const h = cssSizeToPx(tr?.style?.height) || cssSizeToPx(tr?.getAttribute?.("height"));
-          if (h) rowHeights[String(rowNum)] = h;
-
-          if (!occupied[r]) occupied[r] = [];
           let col = 1;
-          let lastReal = null;
-          let lastRealColspan = 1;
 
           const rowCells = Array.from(tr.children).filter((el) => /^(TD|TH)$/i.test(String(el?.tagName || "")));
           for (const cellEl of rowCells) {
-            while (occupied[r] && occupied[r][col]) col++;
-
             const rawStyle = String(cellEl?.getAttribute?.("style") || "");
-            const flags = {
-              ignoreCol: /mso-ignore\s*:\s*colspan/i.test(rawStyle),
-              ignoreRow: /mso-ignore\s*:\s*rowspan/i.test(rawStyle),
-              displayNone: /display\s*:\s*none/i.test(rawStyle),
-              visibilityHidden: /visibility\s*:\s*hidden/i.test(rawStyle),
-            };
-
-            const spanCols = Math.max(1, Math.floor(Number(cellEl?.getAttribute?.("colspan") || 1)));
-            const spanRows = Math.max(1, Math.floor(Number(cellEl?.getAttribute?.("rowspan") || 1)));
-            const text = getExcelCellText(cellEl);
-            maxRow = Math.max(maxRow, rowNum + spanRows - 1);
-
-            function markOccupied(startRowIdx0, startCol1, rowspan, colspan) {
-              const rs = Math.max(1, Math.floor(Number(rowspan || 1)));
-              const cs = Math.max(1, Math.floor(Number(colspan || 1)));
-              for (let rr = 0; rr < rs; rr++) {
-                const rowIdx = startRowIdx0 + rr;
-                if (!occupied[rowIdx]) occupied[rowIdx] = [];
-                for (let cc = 0; cc < cs; cc++) occupied[rowIdx][startCol1 + cc] = true;
-              }
-            }
-
-            if (flags.displayNone) {
-              if (text && lastReal && !String(lastReal.text || "").trim()) lastReal.text = text;
+            if (/display\s*:\s*none/i.test(rawStyle)) {
+              col++;
               continue;
             }
 
-            // Excel clipboard may use colspan/rowspan or "mso-ignore:*" filler cells to represent overflow text.
-            // We don't import merges, but we must still keep column positions aligned.
-            const isFiller = flags.ignoreCol || flags.ignoreRow || flags.visibilityHidden;
-            if (isFiller) {
-              const hasOwnText = Boolean(String(text || "").trim());
-              if (hasOwnText && (!lastReal || String(lastReal.text || "").trim())) {
-                // If a filler-marked cell actually contains text, keep it as a real cell.
-              } else {
-                if (text && lastReal && !String(lastReal.text || "").trim()) lastReal.text = text;
-
-                // If the previous real cell already has colspan > 1, filler "mso-ignore:colspan" cells are usually redundant.
-                if (flags.ignoreCol && !flags.ignoreRow && !flags.visibilityHidden && lastReal && lastRealColspan > 1 && spanCols === 1 && spanRows === 1) {
-                  continue;
-                }
-
-                markOccupied(r, col, spanRows, spanCols);
-                maxCol = Math.max(maxCol, col + spanCols - 1);
-                col += spanCols;
-                continue;
-              }
-            }
-
+            const text = getExcelCellText(cellEl);
             const style = buildExcelCellStyle(cellEl, cssMeta);
-            let entry = null;
             if (style || text) {
-              for (let rr = 0; rr < spanRows; rr++) {
-                for (let cc = 0; cc < spanCols; cc++) {
-                  const addr = addrFromRC(col + cc, rowNum + rr);
-                  const isStart = rr === 0 && cc === 0;
-                  const cellText = isStart ? text : "";
-                  if (!style && !cellText) continue;
-                  const next = { addr, class: ["cell"] };
-                  if (cellText) next.text = cellText;
-                  if (style) next.style = style;
-                  cells.push(next);
-                  if (isStart) entry = next;
-                }
-              }
+              const addr = addrFromRC(col, rowNum);
+              const entry = { addr, class: ["cell"] };
+              if (text) entry.text = text;
+              if (style) entry.style = style;
+              cells.push(entry);
             }
 
-            markOccupied(r, col, spanRows, spanCols);
-            maxCol = Math.max(maxCol, col + spanCols - 1);
-            col += spanCols;
-            if (entry) {
-              lastReal = entry;
-              lastRealColspan = spanCols;
-            }
+            maxCol = Math.max(maxCol, col);
+            col++;
           }
         }
 
-        const cellSize = pickSquareCellSize(colWidths, rowHeights, 32);
+        const colCountHint = table.querySelectorAll("col").length;
+        if (colCountHint) maxCol = Math.max(maxCol, colCountHint);
+
+        const cellSize = DEFAULT_CELL_SIZE_PX;
 
         const cfg = {
           type: "excel-like-table",
           grid: {
-            rows: Math.max(1, maxRow || rows.length),
-            cols: Math.max(1, maxCol || colEls.length || 1),
+            rows: Math.max(1, rows.length),
+            cols: Math.max(1, maxCol || 1),
             defaultColWidth: cellSize,
             defaultRowHeight: cellSize,
+            excelOverflow: true,
           },
           css: {
-            cell: "padding:2px 4px;vertical-align:middle;background:#fff;color:#111;white-space:pre-wrap;",
+            cell: "padding:2px 4px;vertical-align:middle;background:#fff;color:#111;white-space:nowrap;",
           },
           defaultCellClass: ["cell"],
           merges: [],
@@ -6734,20 +6709,21 @@
         if ($("tplSource")?.options?.length) $("tplSource").value = $("tplSource").options[0].value;
         $("ctxJson").value = "";
 
-        const skeleton = {
-          type: "excel-like-table",
-          grid: {
-            rows: 8,
-            cols: 8,
-            defaultColWidth: 32,
-            defaultRowHeight: 32,
-          },
-          css: {
-            cell: "border:1px solid #222;padding:2px 4px;vertical-align:middle;background:#fff;color:#111;white-space:pre-wrap;",
-          },
-          merges: [],
-          cells: [{ addr: "A1", text: "Title", class: ["cell"] }],
-        };
+          const skeleton = {
+            type: "excel-like-table",
+            grid: {
+              rows: 8,
+              cols: 8,
+              defaultColWidth: 20,
+              defaultRowHeight: 20,
+              excelOverflow: true,
+            },
+            css: {
+              cell: "border:1px solid #222;padding:2px 4px;vertical-align:middle;background:#fff;color:#111;white-space:nowrap;",
+            },
+            merges: [],
+            cells: [{ addr: "A1", text: "Title", class: ["cell"] }],
+          };
         writeTemplateJson(skeleton);
         renderPreview();
         setStatus("New template skeleton created.", false);
