feat(ui): implement tree-view for objects and parameter navigation
This update introduces a hierarchical tree-view to the objects list, allowing for a more organized display of routines and their associated parameters.

Key changes:
- Added a tree-like structure to the objects table with toggleable rows and indentation levels.
- Implemented a "No description only" filter to help users quickly identify undocumented code elements.
- Added parameter-level navigation: selecting a parameter in the objects list now automatically scrolls to and highlights that specific parameter in the details view.
- Introduced new CSS utility classes for tree components, mono-spaced cells, and improved toolbar layouts.
- Enhanced state management to track selected parameter keys for deep-linking within the UI.

--- a/web/index.html
+++ b/web/index.html
@@ -51,8 +51,12 @@
           <section class="tab-panel is-active" id="tab-objects">
             <div class="split">
               <div class="split__left">
-                <div class="toolbar">
+                <div class="toolbar toolbar--row">
                   <input id="objectSearch" class="input" type="search" placeholder="Search (FORM, EVENT, name)..." />
+                  <label class="toolbar-check">
+                    <input id="objectNoDescOnly" type="checkbox" />
+                    Chưa có mô tả
+                  </label>
                 </div>
                 <div class="table-wrap">
                   <table class="table" id="objectsTable">
@@ -60,14 +64,7 @@
                       <tr>
                         <th>Kind</th>
                         <th>Name</th>
-                        <th>Depth</th>
-                        <th>Params</th>
-                        <th>DATA</th>
-                        <th>CONST</th>
-                        <th>Writes</th>
-                        <th>Assign</th>
-                        <th>Defined</th>
-                        <th>Cycle</th>
+                        <th>Mô tả</th>
                       </tr>
                     </thead>
                     <tbody></tbody>
